// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fieldset > render 1`] = `
<body>
  <div>
    <fieldset
      class="sc-ERObt sc-dNsVcS imJFus jeJqUH"
    >
      <legend
        class="sc-dLMFU sc-fulCBj gvLBvO bwgoWY"
      >
        testing
      </legend>
    </fieldset>
  </div>
</body>
`;

exports[`Fieldset render 1`] = `
<body>
  <div>
    <fieldset
      class="sc-ad0ad6f5-0 sc-3dab0ad0-0 bZaRlP eSpKwY"
    >
      <legend
        class="sc-dLMFU sc-3dab0ad0-1 gvLBvO lhUDIt"
      >
        testing
      </legend>
    </fieldset>
  </div>
</body>
`;
